fixing scrollbars in chrome

--- a/app/css/layout.css
+++ b/app/css/layout.css
@@ -166,7 +166,7 @@ li a:hover {
     grid-template-columns: 80% 20%;
     border-bottom: 1px solid #1e1e1e;
     padding: 5px;
-    overflow: scroll;
+    overflow: hidden;
 }
 .portfolioEntry:hover {
     background-color: rgba(17, 17, 17, .5);
